finally fixed overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,33 @@
-body,
-html {
+body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
-    padding: 0;
+    box-sizing: border-box;
+}
+#search {
+    margin: 5px;
+}
+
+#main {
+    height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
 
-#main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
 #content {
+    height: fit-content;
     flex: 1;
     display: flex;
     flex-direction: row;
+    overflow: auto;
 }
 #timeSeries {
+    flex: 1;
     max-width: 30%;
     word-wrap: break-word;
     overflow-y: scroll;
+    padding: 5px;
 }
 #content > div {
     flex: auto;
